Refactored code by recommendations